correct overflow problem on mobile menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,9 @@ body {
   color: #fff;
   font-family: 'Montserrat', sans-serif;
 }
+body.main {
+  overflow: hidden;
+}
 body.light {
   background-color: #fcfcfc;
   color: #1d1d1d;
